--- a/app/Rmd/report_fish_EN.Rmd
+++ b/app/Rmd/report_fish_EN.Rmd
@@ -96,7 +96,7 @@ The Maritimes Fishery Information System (MARFIS) is a DFO database, managed by 
 
 #### ***Area-specific MARFIS & ISDB search results***
 
-```{r new-marfis-isdb-results, include=FALSE, cache=FALSE}
+```{r marfis-isdb-results, include=FALSE, cache=FALSE}
 
 isdb2015_demo <- readRDS(here::here("hex_data/isdb2015_DemoHex_sf.RDS"))
 marfis2015_demo <- readRDS(here::here("hex_data/marf2015_DemoHex_sf.RDS"))
@@ -104,12 +104,22 @@ isdbClipped <- master_intersect(isdb2015_demo, region, studyArea, mapBbox = bbox
 marfisClipped <- master_intersect(marfis2015_demo, region, studyArea, mapBbox = bboxMap, Year = minYear)
 
 # generate tables here
+if (!is.null(isdbClipped)) {
+  isdbTableList <- create_table_ISDB(isdbClipped$studyData)
+  isdbAllTable <- isdbTableList$allSpecies
+  isdbSARTable <- isdbTableList$sarSpecies
+}
 
+if (!is.null(marfisClipped)) {
+  marfisTableList <- create_table_MARFIS(marfisClipped$studyData)
+  marfisAllTable <- marfisTableList$allSpecies
+  marfisSARTable <- marfisTableList$sarSpecies
+}
 ```
 
 -   
 
-```{r new-isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_isdb <- if (is.null(isdbClipped)) {
     "There are no relevant records in the Industry Survey Database (ISDB) for this search area."
   } else {
@@ -121,7 +131,7 @@ writeLines(Report_isdb)
 
 -   
 
-```{r new-marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
+```{r marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
 Report_marfis <- if (is.null(marfisClipped)) {
     "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
   } else {
@@ -133,7 +143,7 @@ writeLines(Report_marfis)
 
 -   
 
-```{r new-marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown by species. Rule of five was not applied.'}
+```{r marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown by species. Rule of five was not applied.'}
 if (!is.null(isdbClipped)) {
   specList <- filter(ISSPECIESCODES, get("Scientific Name") %in% listed_species$`Scientific Name`)$SPECCD_ID
   plot_marfis_grid(areaMap, isdbClipped$mapData, specList, marfis = FALSE)
@@ -146,82 +156,28 @@ if (!is.null(marfisClipped)) {
 
 -   
 
-```{r marfis-isdb-results, include=FALSE, cache=FALSE}
-outputListI <- master_intersect(isdb_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
-outputListM <- master_intersect(marfis_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
-Samples_bboxI <- outputListI$mapPoints
-Samples_bboxM <- outputListM$mapPoints
-
-if (!is.null(outputListI)) {
-  tableList <- create_table_ISDB(outputListI$studyData, listed_species,
-                                 speciesTable = ISSPECIESCODES)
-  table_isdb1 <- tableList[[1]]
-  table_isdb2 <- tableList[[2]]
-}
-
-if (!is.null(outputListM)) {
-  tableList <- create_table_MARFIS(outputListM$studyData, listed_species, speciesTable = MARFISSPECIESCODES)
-  table_mar1 <- tableList[[1]]
-  table_mar2 <- tableList[[2]]
-}
-```
-
--   
-
-```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_isdb <- if (is.null(outputListI)) {
-    "There are no relevant records in the Industry Survey Database (ISDB) for this search area."
-  } else {
-    "There are relevant records in the Industry Survey Database (ISDB) for this search area."
-  }
-Report_isdb<-noquote(Report_isdb)
-writeLines(Report_isdb)
-```
-
--   
-
-```{r marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_marfis <- if (is.null(outputListM)) {
-    "There are no relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-  } else {
-    "There are relevant records in the Maritimes Fishery Information System (MARFIS) for this search area."
-  }
-Report_marfis<-noquote(Report_marfis)
-writeLines(Report_marfis)
-```
-
-```{r marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Quality Tier: Medium. Security level: Protected B. Map showing the search area defined by the user (red outline) used to query aggregated information from Maritimes Fishery Information System (MARFIS) and/or Industry Survey Database (ISDB) observation records shown as black points, for all species. Rule of five was not applied.'}
-if (!is.null(outputListI) & !is.null(outputListM)) {
-  areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black") + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
-} else if (!is.null(outputListI)) {
-    areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
-} else if (!is.null(outputListM)) {
-        areaMap + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
-}
-```
-
 ```{r isdb-SAR-table}
-if (!is.null(outputListI)) {
-knitr::kable(table_isdb2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbClipped)) {
+knitr::kable(isdbSARTable, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 <br><br>
 
 ```{r isdb-all-table}
-if (!is.null(outputListI)) {
-  knitr::kable(table_isdb1, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbClipped)) {
+  knitr::kable(isdbAllTable, align="l", caption="Quality Tier: Medium. Security level: Protected B. Industry Survey Database (ISDB) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r marfis-SAR-table}
-if (!is.null(outputListM)) {
-  knitr::kable(table_mar2, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(marfisClipped)) {
+  knitr::kable(marfisSARTable, align="l", caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of species contained within the search area and listed by the <i>Species At Risk Act</i> (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 <br><br>
 
 ```{r marfis-all-table}
-if (!is.null(outputListM)) {
-  knitr::kable(table_mar1, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
+if (!is.null(marfisClipped)) {
+  knitr::kable(marfisAllTable, caption="Quality Tier: Medium. Security level: Protected B. Maritimes Fishery Information System (MARFIS) observation records of <u>all species</u> contained within the search area, summarized by species or species group. <b>The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
