--- a/app/Rmd/report_fish_FR.Rmd
+++ b/app/Rmd/report_fish_FR.Rmd
@@ -91,27 +91,28 @@ Le Système d’information sur les pêches des Maritimes (SIPMAR) est une base 
 
 #### ***Résultats de recherche du SIPMAR et de la BDRI par zone***
 ```{r marfis-isdb-results, include=FALSE, cache=FALSE}
-outputListI <- master_intersect(isdb_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
-outputListM <- master_intersect(marfis_sf, region, studyArea, mapBbox = bboxMap, Year = minYear)
-Samples_bboxI <- outputListI$mapPoints
-Samples_bboxM <- outputListM$mapPoints
 
-if (!is.null(outputListI)) {
-  tableList <- create_table_ISDB(outputListI[[1]], listed_species,
-                                 speciesTable = ISSPECIESCODES)
-  table_isdb1 <- tableList[[1]]
-  table_isdb2 <- tableList[[2]]
+isdb2015_demo <- readRDS(here::here("hex_data/isdb2015_DemoHex_sf.RDS"))
+marfis2015_demo <- readRDS(here::here("hex_data/marf2015_DemoHex_sf.RDS"))
+isdbClipped <- master_intersect(isdb2015_demo, region, studyArea, mapBbox = bboxMap, Year = minYear)
+marfisClipped <- master_intersect(marfis2015_demo, region, studyArea, mapBbox = bboxMap, Year = minYear)
+
+# generate tables here
+if (!is.null(isdbClipped)) {
+  isdbTableList <- create_table_ISDB(isdbClipped$studyData)
+  isdbAllTable <- isdbTableList$allSpecies
+  isdbSARTable <- isdbTableList$sarSpecies
 }
 
-if (!is.null(outputListM)) {
-  tableList <- create_table_MARFIS(outputListM[[1]], listed_species, speciesTable = MARFISSPECIESCODES)
-  table_mar1 <- tableList[[1]]
-  table_mar2 <- tableList[[2]]
+if (!is.null(marfisClipped)) {
+  marfisTableList <- create_table_MARFIS(marfisClipped$studyData)
+  marfisAllTable <- marfisTableList$allSpecies
+  marfisSARTable <- marfisTableList$sarSpecies
 }
 ```
 *
 ```{r isdb-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_isdb <- if (is.null(outputListI)) {
+Report_isdb <- if (is.null(isdbClipped)) {
     "Il n’y a aucun registre pertinent dans la base de données des relevés de l’industrie (BDRI) pour cette zone de recherche."
   } else {
     "Il y a des registres pertinents dans la base de données des relevés de l’industrie (BDRI) pour cette zone de recherche."
@@ -122,7 +123,7 @@ writeLines(Report_isdb)
 
 *
 ```{r marfis-check, comment="", prompt=TRUE, echo=FALSE, results='asis'}
-Report_marfis <- if (is.null(outputListM)) {
+Report_marfis <- if (is.null(marfisClipped)) {
     "Il n’y a aucun registre pertinent dans le Système d’information sur les pêches des Maritimes (SIPMAR) pour cette zone de recherche."
   } else {
     "Il y a des registres pertinents dans le Système d’information sur les pêches des Maritimes (SIPMAR) pour cette zone de recherche."
@@ -132,32 +133,34 @@ writeLines(Report_marfis)
 ```
 
 ```{r marfis-isdb-plot, fig.height=8, fig.width=11, fig.cap='Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Carte montrant la zone de recherche définie par l’utilisateur (entourée de rouge) utilisée pour demander des renseignements agrégés provenant des dossiers d’observation du Système d’information sur les pêches des Maritimes (SIPMAR) et/ou de la Base de données des relevés de l’industrie (BDRI), qui sont présentés sous forme de points noirs, pour toutes les espèces. La règle des cinq n’a pas été appliquée.'}
-if (!is.null(outputListI) & !is.null(outputListM)) {
-  areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black") + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
-} else if (!is.null(outputListI)) {
-    areaMap + geom_point(data = Samples_bboxI, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
-} else if (!is.null(outputListM)) {
-        areaMap + geom_point(data = Samples_bboxM, aes(x = long, y = lat), size = 2, shape = 16, col = "black")
+if (!is.null(isdbClipped)) {
+  specList <- filter(ISSPECIESCODES, get("Scientific Name") %in% listed_species$`Scientific Name`)$SPECCD_ID
+  plot_marfis_grid(areaMap, isdbClipped$mapData, specList, marfis = FALSE)
+} 
+if (!is.null(marfisClipped)) {
+  specList <- filter(MARFISSPECIESCODES, COMMONNAME %in% listed_species$Common_Name_MARFIS)$SPECIES_CODE
+  plot_marfis_grid(areaMap, marfisClipped$mapData, specList, marfis = TRUE)
 }
 ```
+
 ```{r isdb-SAR-table}
-if (!is.null(outputListI)) {
-knitr::kable(table_isdb2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>TSi une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbClipped)) {
+knitr::kable(isdbSARTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>TSi une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r isdb-all-table}
-if (!is.null(outputListI)) {
-  knitr::kable(table_isdb1, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(isdbClipped)) {
+  knitr::kable(isdbAllTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation de la base de données des relevés de l’industrie de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
 ```{r marfis-SAR-table}
-if (!is.null(outputListM)) {
-  knitr::kable(table_mar2, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+if (!is.null(marfisClipped)) {
+  knitr::kable(marfisSARTable, align="l", caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes des espèces contenues dans la zone de recherche et inscrites en vertu de la <i>Loi sur les espèces en péril</i> (LEP) ou évaluées par le Comité sur la situation des espèces en péril au Canada (COSEPAC). <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")} %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 <br><br>
 ```{r marfis-all-table}
-if (!is.null(outputListM)) {
-  knitr::kable(table_mar1, caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
+if (!is.null(marfisClipped)) {
+  knitr::kable(marfisAllTable, caption="Niveau de qualité : Moyenne. Niveau de sécurité : Protégé B. Registres d’observation du Système d’information sur les pêches des Maritimes de <u>toutes les espèces</u> contenues dans la zone de recherche, résumées par espèce ou groupe d’espèces. <b>Si une espèce est absente du présent tableau, cette absence devrait être interprétée comme une absence de déclaration de l’espèce, et pas nécessairement comme l’absence de l’espèce dans cette zone.</b>", booktabs = T, escape = F, linesep="")  %>% column_spec(1, width="15cm")
 } %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 ### **Système d’information sur la biodiversité des océans (SIBO)**  
