--- a/sections/whelk/whelk_en.rmd
+++ b/sections/whelk/whelk_en.rmd
@@ -16,56 +16,61 @@ if (FALSE) {
 }
 ```
 
-### **Template Section Title** {#template-section}
+### **Whelk Survey Section Title** {#whelk-section}
 
-```{r template-load, include=FALSE}
+```{r whelk-load, include=FALSE}
 # load in section specific data
-load_rdata(c("template_rr"), regionStr, env = environment())
+load_rdata(c("whelk_rr"), regionStr, env = environment())
 
 ```
 
-```{r template-meta, results='asis'}
+```{r whelk-meta, results='asis'}
 # metadata blurb at start of each section
-write_meta(template_rr, "EN")
+write_meta(whelk_rr, "EN")
 ```
 
-ADD SECTION TEXT HERE.
+Dataset description from the Open Data record [@OpenData_whelk]:
+```{r whelk-text, results='asis'}
+writeLines(noquote(whelk_rr$text$en))
+```
 
 
-#### ***Area-specific Template results***
-```{r template-results, include=FALSE, cache=FALSE}
+#### ***Area-specific Whelk Surveyresults***
+```{r whelk-results, include=FALSE, cache=FALSE}
 # clip the data to the Study and Map areas:
-templateOutputList <- master_intersect(template_rr$data_sf, mapDataList)
+whelkOutputList <- master_intersect(whelk_rr$data_sf, mapDataList)
 
 # Create tables based off of the Scientific Name column, one with all species found,
 # and one with only the Species at Risk found.
-tableList <- create_sar_tables(templateOutputList$studyData, listed_species)
-templateAllTable <- tableList$allSpecies
-templateSarTable <- tableList$sarData
+whelkOutputList$studyData["Scientific Name"] <- whelkOutputList$studyData$scientificName
+whelkOutputList$studyData["Common Name"] <- whelkOutputList$studyData$scientificName
+tableList <- create_sar_tables(whelkOutputList$studyData, listed_species)
+whelkAllTable <- tableList$allSpecies
+whelkSarTable <- tableList$sarData
 ```
 
-```{r template-check, echo=FALSE, results='asis',}
+```{r whelk-check, echo=FALSE, results='asis',}
 # Check if there is any data in the study area
-templateReport <- if (is.null(templateOutputList$studyData)) {
-  "* There are no relevant template records for this search area."
+whelkReport <- if (is.null(whelkOutputList$studyData)) {
+  "* There are no relevant whelk records for this search area."
 } else {
-  "* There are relevant template records for this search area."
+  "* There are relevant whelk records for this search area."
 }
-writeLines(noquote(templateReport))
+writeLines(noquote(whelkReport))
 ```
 
-```{r template-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(template_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from template records.')}
-if (!is.null(templateOutputList$studyData)) {
+```{r whelk-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(whelk_rr, "EN"), 'Map showing the search area defined by the user (red outline) used to query information from whelk records.')}
+if (!is.null(whelkOutputList$studyData)) {
   # common plotting function:
-  plot_rr_sf(areaMap, templateOutputList$mapData, attribute = 
-               template_rr$attribute)
+  plot_rr_sf(areaMap, whelkOutputList$mapData, attribute = 
+               whelk_rr$attribute, shape=20, size=3, color=rrBlue)
 }
 ```
 <br>
-```{r template-table}
-if (!is.null(templateOutputList$studyData)) {
-  if (nrow(templateSarTable) > 0) {
-    knitr::kable(templateSarTable, align = "l", caption = paste("\\label{tab:template_table}", write_caption_blurb(template_rr, "EN"), "Template records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
+```{r whelk-table}
+if (!is.null(whelkOutputList$studyData)) {
+  if (nrow(whelkSarTable) > 0) {
+    knitr::kable(whelkSarTable, align = "l", caption = paste("\\label{tab:whelk_table}", write_caption_blurb(whelk_rr, "EN"), "whelk records of species contained within the search area and listed by the Species At Risk Act (SARA), or assessed by the Committee on the Status of Endangered Wildlife in Canada (COSEWIC). Frequency represents the subset of the sampling locations out of the total where each species is present. The absence of a species in this table should be interpreted as an absence of reporting, not necessarily as an absence of the species in the area. </b>"), booktabs = T, escape = F, linesep = "") %>% kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
   }
 }
 ```
