--- a/sections/nitroLoad/nitroLoad_en.rmd
+++ b/sections/nitroLoad/nitroLoad_en.rmd
@@ -55,20 +55,39 @@ nitroLoadReport <- if (is.null(totalOutputList$studyData) & is.null(deltaOutputL
 writeLines(noquote(nitroLoadReport))
 ```
 
-```{r totalNitroLoad-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing Total_Nitrogen_Load,Total Nitrogen load (kg N/yr). Calculated in: [@nitroLoad_pub] ')}
+```{r totalNitroLoad-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing Total_Nitrogen_Load,Total Nitrogen load (kg N/yr). Calculated in: [@nitroLoad_pub] ')}
 if (!is.null(totalOutputList$studyData)) {
     par(mar = c(4, 4, .1, .1))
-  plot(plot_rr_sf(areaMap, totalOutputList$mapData, attribute=totalNitroLoad_rr$attribute, legendName="Nitrogen Load (kg/yr)", continuousAttr=TRUE))
-  plot(plot_rr_sf(regionMap, totalOutputList$regionData, attribute=totalNitroLoad_rr$attribute, legendName="Nitrogen Load (kg/yr)", continuousAttr=TRUE))
+    totalRegionMax <- max(totalOutputList$regionData[[totalNitroLoad_rr$attribute]])
+    totalRegionMin <- min(totalOutputList$regionData[[totalNitroLoad_rr$attribute]])
+    plot(plot_rr_sf(regionMap, totalOutputList$regionData, 
+                    attribute=totalNitroLoad_rr$attribute, 
+                    legendName="Nitrogen Load (kg/yr)", 
+                    continuousAttr=TRUE))
+    plot(plot_rr_sf(areaMap, totalOutputList$mapData, 
+                    attribute=totalNitroLoad_rr$attribute, 
+                    legendName="Nitrogen Load (kg/yr)", 
+                    continuousAttr=TRUE, 
+                    minScale=totalRegionMin, maxScale=totalRegionMax))
+
   
 }
 ```
 
-```{r deltaNitroLoad-plot, fig.height=7, fig.width=11, fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing the Mean ratio between the total nitrogen embayment loading rate and the sum of the rates of tidal exchange and freshwater recharge. Calculated in: [@nitroLoad_pub].')}
+```{r deltaNitroLoad-plot, fig.height=7, fig.width=11, fig.show="hold", out.width="50%", fig.cap=paste(write_caption_blurb(totalNitroLoad_rr, "EN"), 'Map showing the Mean ratio between the total nitrogen embayment loading rate and the sum of the rates of tidal exchange and freshwater recharge. Calculated in: [@nitroLoad_pub].')}
 if (!is.null(deltaOutputList$studyData)) {
     par(mar = c(4, 4, .1, .1))
-  plot(plot_rr_sf(areaMap, deltaOutputList$mapData, attribute=deltaNitroLoad_rr$attribute, legendName="Ratio", continuousAttr=TRUE))
-  plot(plot_rr_sf(regionMap, deltaOutputList$regionData, attribute=deltaNitroLoad_rr$attribute, legendName="Ratio", continuousAttr=TRUE))
+    deltaRegionMax <- max(deltaOutputList$regionData[[deltaNitroLoad_rr$attribute]])
+    deltaRegionMin <- min(deltaOutputList$regionData[[deltaNitroLoad_rr$attribute]])
+    plot(plot_rr_sf(regionMap, deltaOutputList$regionData,
+                    attribute=deltaNitroLoad_rr$attribute, 
+                    legendName="Ratio", 
+                    continuousAttr=TRUE))
+    plot(plot_rr_sf(areaMap, deltaOutputList$mapData,
+                    attribute=deltaNitroLoad_rr$attribute, 
+                    legendName="Ratio", continuousAttr=TRUE,
+                    minScale=deltaRegionMin, maxScale=deltaRegionMax))
+
   
 }
 ```
